--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
               <a class="privacy-policy-link" href="">Privacy Policy</a>
             </label>
           </div>
-          <button class="review-form-submit" tupe="submit">Send</button>
+          <button class="review-form-submit" type="submit">Send</button>
         </form>
       </div>
     </div>
