--- a/index.html
+++ b/index.html
@@ -545,13 +545,13 @@
           <div class="review-form-checkbox-wrapper">
             <input
               class="review-form-checkbox visually-hidden"
-              id="privacy-policy"
+              id="user-name"
               type="checkbox"
-              name="privacy-policy"
+              name="user-name"
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="privacy-policy">
+            <label class="review-form-checkbox-label" for="user-name">
               <span class="review-form-own-checkbox">
                 <svg
                   class="review-form-own-checkbox-icon"
