--- a/index.html
+++ b/index.html
@@ -475,15 +475,13 @@
         </p>
         <form class="review-form">
           <div class="review-form-field-wrapper">
-            <label class="review-form-field-lable" for="user-first-name"
-              >Name</label
-            >
+            <label class="review-form-field-lable" for="user-name">Name</label>
             <div class="review-form-input-wrapper">
               <input
                 class="review-form-input"
                 type="text"
-                id="user-first-name"
-                name="user-firsrt-name"
+                id="user-name"
+                name="user-name"
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
                 title="Volodymyr"
                 required
@@ -545,13 +543,13 @@
           <div class="review-form-checkbox-wrapper">
             <input
               class="review-form-checkbox visually-hidden"
-              id="user-name"
+              id="user-privacy"
               type="checkbox"
-              name="user-name"
+              name="user-privacy"
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="user-name">
+            <label class="review-form-checkbox-label" for="user-privacy">
               <span class="review-form-own-checkbox">
                 <svg
                   class="review-form-own-checkbox-icon"
