--- a/index.html
+++ b/index.html
@@ -460,10 +460,29 @@
             </li>
           </ul>
         </div>
+        <div class="email-footer">
+          <p class="title-icons">Subscribe</p>
+          <form class="second-review-form">
+            <label class="second-review-form-label" for="user-email-footer">
+              <input
+                class="form-footer-input"
+                type="email"
+                name="user-email-footer"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="btn-subscribe-footer" type="submit">
+              Subscribe
+              <svg class="btn-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- ======= BACKDROP ======= -->
-    <div class="backdrop is-open">
+    <div class="backdrop is-ope">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-btn-icon" width="8" height="8">
