--- a/index.html
+++ b/index.html
@@ -463,11 +463,12 @@
         <div class="email-footer">
           <p class="title-icons">Subscribe</p>
           <form class="second-review-form">
-            <label class="second-review-form-label" for="user-email-footer">
+            <label class="second-review-form-label" for="email-footer">
               <input
                 class="form-footer-input"
                 type="email"
-                name="user-email-footer"
+                id="email-footer"
+                name="email-footer"
                 placeholder="E-mail"
               />
             </label>
