--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
       </div>
     </footer>
     <!-- ======= BACKDROP ======= -->
-    <div class="backdrop is-ope">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -545,7 +545,7 @@
               </svg>
             </div>
           </div>
-          <div class="review-form-field-wrapper">
+          <div class="comment-review-form-field-wrapper">
             <label class="review-form-field-lable" for="user-comment"
               >Comment</label
             >
